--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ oo2core_9_win64.dll
 /UE4Parse.build
 /setup.onefile-build
 /.eggs
-mappings/++Fortnite+Release-17.00-CL-16593740-Windows_oo.usmap
+*.usmap
 *.bat
 /.mypy_cache
 /mappings
